--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 Raft2Raft/Temp/UnityLockfile
+Raft2Raft/Library/ArtifactDB-lock
+Raft2Raft/Library/SourceAssetDB-lock
